Initial LAN 2023 commit.

--- a/server/src/views/website.twig
+++ b/server/src/views/website.twig
@@ -23,7 +23,7 @@
                     alt="GEPWNAGE"
                     height="30"
                     class="d-inline-block align-top mr-2"
-                >GEPWNAGE ELAN
+                >GEPWNAGE LAN
             </a>
             <button
                 class="navbar-toggler"
