--- a/server/src/views/website/challenge.twig
+++ b/server/src/views/website/challenge.twig
@@ -8,7 +8,7 @@
             <h4>Challenge GEPWNAGE</h4>
 
             <p>
-                This ELAN you can challenge us to beat us in the games we are best at!
+                This LAN you can challenge us to beat us in the games we are best at!
             </p>
             <p>
                 If you want to challenge someone on this list, simply speak to
