--- a/server/src/views/website/services.twig
+++ b/server/src/views/website/services.twig
@@ -7,15 +7,17 @@
         <div class="container d-flex flex-column flex-grow-1">
             <h4 class="mb-3">Minecraft</h4>
             <p>
-                For the minecraft competition, we are running a minecraft server on <code>minecraft.gepwnage.lan</code>.
+                For the minecraft competition, we are running a minecraft server on <code>minecraft.lan</code>.
             </p>
+
+            <h4 class="mb-3">Counter Strike: Global Offensive</h4>
             <p>
-                You can also view the map on <a href="http://minecraft.gepwnage.lan">minecraft.gepwnage.lan</a>.
+                For the CS:GO competition, we are running a CS:GO server on <code>csgo.lan</code>.
             </p>
 
             <h4 class="mb-3">Mumble</h4>
             <p>
-                For mumble (TeamSpeak) there is a mumble server on <code>mumble.gepwnage.lan</code>.
+                For mumble (TeamSpeak) there is a mumble server on <code>mumble.lan</code>.
             </p>
             <p>
                 To download mumble, please visit <a href="https://www.mumble.info/downloads/">mumble.info/downloads</a>.
